# -Toy-project-electric_fan_with-eyes

./: .gitattributes  .gitmodules  README.md
application/: CMakeLists.txt  keyPad.hpp  main.cpp  systemManager.cpp
application/config/: core_config.yaml
application/include/: buzzer.hpp  config_manager.hpp  event_driven.hpp  event_handler.hpp  keyPad.hpp  log.hpp  mqtt_callback.hpp  mqtt_iface.hpp  networkManager.hpp  oled.hpp  signal_callback.hpp  systemManager.hpp  thread_pool.hpp  timer_callback.hpp  utils.hpp  video_manager.hpp
application/include/smart_home/: keyPad.hpp  lcd.hpp
application/src/: build_script.sh  buzzer.cpp  config_manager.cpp  event_driven.cpp  event_handler.cpp  keyPad.cpp  keyPad.hpp  lcd.cpp  log.cpp  main.cpp  mqtt_callback.cpp  mqtt_iface.cpp  networkManager.cpp  oled.cpp  systemManager.cpp  utils.cpp
driver/: Makefile  keyPad.c
driver/BUZZER/: buzzer.c  buzzer.h
driver/PWM/: pwm.c  pwm.h
driver/buzzer_driver/: buzzer.h  module_buzzer.h
driver/pwm_driver/: pwm.h
drivers/: Makefile  keyPad.c
drivers/buzzer_driver/: buzzer.c  buzzer.h  module_buzzer.c
drivers/common/: util.h
drivers/gpio_driver/: custom_gpio.h  linux_custom_gpio.c
drivers/oled_driver/: Makefile  logo.h  module_oled.c  module_ssd1306.c  ssd1306.c  ssd1306.h
drivers/pwm_driver/: pwm.c  pwm.h
drivers/spi_driver/: custom_spi.h  linux_custom_spi.c
lib/ioctl/: ioctl_buzzer.h  ioctl_oled.h
lobby_phone/: .config  Dockerfile  build.sh
lobby_phone/application/: CMakeLists.txt
lobby_phone/application/include/: image_sender.hpp  log.hpp  signal_callback.hpp
lobby_phone/application/src/: event_callback.cpp  event_driven.cpp  event_handler.cpp  image_sender.cpp  keyPad.cpp  main.cpp  systemManager.cpp
lobby_phone/board/: boot.scr  config_4.txt  gen_update_img.sh  genimage-raspberrypi4.cfg  post-build.sh  post-image.sh  sw-description  u-boot.config  update.sh  update_completed.sh
lobby_phone/board/overlay/etc/: fstab  fw_env.config
lobby_phone/board/overlay/etc/init.d/: S99boot_success
lobby_phone/drivers/buzzer_driver/: Makefile  buzzer.c  buzzer.h  module_buzzer.c
lobby_phone/drivers/common/: util.h
lobby_phone/drivers/keypad_driver/: Makefile
lobby_phone/drivers/oled_driver/: module_oled.c
lobby_phone/lib/ioctl/: ioctl_buzzer.h
lobby_phone/package/: Config.in
lobby_phone/package/busybox/: inittab
lobby_phone/package/ifupdown-scripts/: ifupdown-scripts.mk
lobby_phone/package/my_application/: CMakeLists.txt  Config.in  S99core  my_application.mk
lobby_phone/package/my_application/include/: event_callback.hpp  event_driven.hpp  keyPad.hpp  utils.hpp
lobby_phone/package/my_application/src/: buzzer.cpp  event_callback.cpp  event_driven.cpp  keyPad.cpp  main.cpp
lobby_phone/package/my_drivers/: Config.in  Makefile  my_drivers.mk
lobby_phone/package/my_drivers/buzzer_driver/: module_buzzer.c
lobby_phone/package/my_drivers/gpio_driver/: custom_gpio.h  linux_custom_gpio.c
lobby_phone/package/my_drivers/keypad_driver/: keyPad.c
lobby_phone/package/my_drivers/oled_driver/: module_oled.c  ssd1306.c
lobby_phone/package/my_drivers/pwm_driver/: pwm.c
lobby_phone/package/my_drivers/spi_driver/: custom_spi.h
lobby_phone/package/swupdate/: swupdate.config
lobby_phone/package/wpa_supplicant/: wpa_supplicant.conf
script/: send_video.sh  video_manager.sh
(+1 files in other folders)
